# deepin-translation-utils

./: .editorconfig  .gitignore  Cargo.toml  README.md  README.zh_CN.md  build.rs  translation-stats-viewer.html
.github/workflows/: build-and-test.yml
src/: cli.rs  cli_args.rs  lib.rs  linguist_file.rs  main.rs  subcmd.rs  subcmd_statistics.rs  subcmd_txconfig2yaml.rs  subcmd_yaml2txconfig.rs  subcmd_zhconv.rs  transifex.rs  transifex_rest_api.rs  transifex_yaml_file.rs  trfile.rs  tx_config_file.rs
src/i18n_file/: common.rs  gettext.rs  linguist.rs
src/subcmd/: gentxcfg.rs  gentxyaml.rs  monotxconfig.rs  statistics.rs  txconfig2yaml.rs  yaml2txconfig.rs  zhconv.rs
src/transifex/: project_file.rs  rest_api.rs  tx_config_file.rs  yaml_file.rs
src/trfile/: common.rs  gettext.rs  linguist.rs
