[package]
name = "deepin-translation-utils"
version = "0.4.0"
edition = "2024"

[dependencies]
zhconv = { version = "0.3.3", features = ["opencc"] }
serde = { version = "1.0", features = ["derive"] }
quick-xml = { version = "0.37.4", features = ["serialize"] }
clap = { version = "4.5.37", features = ["derive"] }
thiserror = { version = "2.0.12"}
serde_yml = "0.0.12"
regex = "1.11.1"
configparser = { version = "3.1.0", features = ["indexmap"] }
serde_json = "1.0.140"
directories = "6.0.0"
ureq = "3.0.11"
polib = { git = "https://github.com/BrettDong/polib.git", rev = "a8b7616" }
