[package]
name = "deepin-translation-utils"
version = "0.6.1"
edition = "2024"
license = "MIT"
description = "Commandline tool to help you work with Qt Linguist-based and Gettext-based translation files, and Transifex platform-related configurations that are used in deepin's workflow."
readme = "README.md"
repository = "https://github.com/linuxdeepin/deepin-translation-utils"
categories = ["command-line-utilities", "internationalization"]
rust-version = "1.85.0"

[dependencies]
zhconv = { version = "0.3.3", features = ["opencc"] }
serde = { version = "1.0", features = ["derive"] }
quick-xml = { version = "0.37.4", features = ["serialize"] }
clap = { version = "4.5.37", features = ["derive"] }
thiserror = { version = "2.0.12"}
serde_yaml2 = "0.1.3"
regex = "1.11.1"
configparser = { version = "3.1.0", features = ["indexmap"] }
serde_json = "1.0.140"
directories = "6.0.0"
ureq = "3.0.11"
polib = "0.3.0"
walkdir = "2.5.0"
